--- a/src/Imie/GameBundle/Resources/config/routing.yml
+++ b/src/Imie/GameBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 imie_game_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: ImieGameBundle:Default:index }
+    path:     /
+    defaults: { _controller: ImieGameBundle:Home:index }
+
+imie_game_gamepage:
+    path:     /game
+    defaults: { _controller: ImieGameBundle:Game:index }
